--- a/frontend/src/main/js/game/pages/match.css
+++ b/frontend/src/main/js/game/pages/match.css
@@ -70,26 +70,13 @@
   text-align: center;
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
 }
 
-.match.position-red .goal-counter {
-  font-size: 7rem;
-  width: 100%;
-  box-sizing: border-box;
-  text-align: center;
-  position: absolute;
-  top: 50%;
+.match.position-null .goal-counter, .match.position-red .goal-counter {
   transform: translateY(-50%);
 }
 
 .match.position-blue .goal-counter {
-  font-size: 7rem;
-  width: 100%;
-  box-sizing: border-box;
-  text-align: center;
-  position: absolute;
-  top: 50%;
   transform: rotate(180deg) translateY(50%);
 }
 
@@ -258,14 +245,12 @@
   transform: rotate(-90deg);
   display: inline-block;
   font-size: 3rem;
-
   opacity: 0.1;
 }
 
-.position-red .setcounter > div > span {
+.position-null .setcounter > div > span, .position-red .setcounter > div > span {
   transform: rotate(90deg);
   display: inline-block;
   font-size: 3rem;
-
   opacity: 0.1;
 }
