--- a/frontend/src/main/js/game/components/panel.css
+++ b/frontend/src/main/js/game/components/panel.css
@@ -9,6 +9,7 @@
 
 .position-blue .panel {
   left: 0;
+  right: initial;
 }
 
 .panel > * {
@@ -27,7 +28,7 @@
   height: 100%;
   width: 100vw;
   background-color: rgba(220, 220, 220, 0.6);
-  transition: width 0s 0s, background-color 1s 0s;
+  transition: width 0s 0s, background-color 0.7s 0s;
 }
 
 .position-blue .panel .background {
@@ -37,18 +38,26 @@
 .panel.closed .background {
   width: 0;
   background-color: transparent;
-  transition: width 0s 1s, background-color 1s 0s;
+  transition: width 0s 1s, background-color 0.7s 0.3s;
+}
+
+.panel .features-container {
+  height: 100%;
+  width: calc(98vw - 0.2rem - 1.6rem);
+  transition: 1s;
+  overflow: hidden;
+  position: relative;
+}
+
+.panel.closed .features-container {
+  width: 0;
 }
 
 .panel .features {
+  position: absolute;
   height: 100%;
-  width: calc(98vw - 0.2rem - 1.6rem);
-  transition: 0.5s;
+  width: 100vw;
   background-color: #535353;
-}
-
-.panel.closed .features {
-  width: 0;
 }
 
 .panel .edge {
@@ -59,10 +68,12 @@
 
 .position-blue .panel .features {
   background-color: #4b93e2;
+  left: 0;
 }
 
 .position-red .panel .features {
   background-color: #cf0017;
+  right: 0;
 }
 
 .position-blue .panel .edge {
@@ -71,7 +82,6 @@
 
 .position-red .panel .edge {
    background-color: #cf0017;
-   right: 0;
  }
 
 .panel .display {
@@ -151,4 +161,20 @@
 
 .position-blue .panel .display .display-container > * {
   transform: rotate(-90deg);
+}
+
+.features .side-red, .features .side-blue {
+  height: 50%;
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.features .side-red {
+  transform: rotate(180deg);
+}
+
+.features .goal-counter, .features .goal-counter {
+  color: white;
 }
