--- a/frontend/src/main/js/game/pages/match.css
+++ b/frontend/src/main/js/game/pages/match.css
@@ -54,48 +54,16 @@
   color: #cf0017;
 }
 
-.match .goal-counter-container {
-  position: absolute;
-  width: 100%;
-  height: calc(100% + 3rem);
+.match .team-red .goal-counter-container, .match .team-blue .goal-counter-container {
   background-image: radial-gradient(#ffffff 0%, transparent 100%);
-  left: 0;
-  top: -3rem;
-}
-
-.match .goal-counter {
-  font-size: 7rem;
-  width: 100%;
-  box-sizing: border-box;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-}
-
-.match.position-null .goal-counter, .match.position-red .goal-counter {
-  transform: translateY(-50%);
-}
-
-.match.position-blue .goal-counter {
-  transform: rotate(180deg) translateY(50%);
-}
-
-.match .team-blue .goal-counter {
-  color: #4b93e2;
 }
 
 .match .team-red .goal-counter {
   color: #cf0017;
 }
 
-.match .team-blue .current-goals {
-  display: inline-block;
-  transform: rotate(90deg);
-}
-
-.match .team-red .current-goals {
-  display: inline-block;
-  transform: rotate(-90deg);
+.match .team-blue .goal-counter {
+  color: #4b93e2;
 }
 
 /** one player ui **/
