--- a/frontend/src/main/js/game/components/panel.css
+++ b/frontend/src/main/js/game/components/panel.css
@@ -25,7 +25,7 @@
   top: 0;
   right: 0;
   z-index: -1;
-  height: 100%;
+  height: 100vh;
   width: 100vw;
   background-color: rgba(220, 220, 220, 0.6);
   transition: width 0s 0s, background-color 0.7s 0s;
@@ -71,7 +71,12 @@
   background-color: #cf0017;
 }
 
-.features .side-red, .features .side-blue {
+.panel .features .admin-panel {
+  width: 100%;
+  height: 100%;
+}
+
+.admin-panel .side-red, .admin-panel .side-blue {
   height: 50%;
   width: 100%;
   position: relative;
@@ -80,15 +85,15 @@
   border-top: 0.2rem solid transparent;
 }
 
-.features .side-red {
+.admin-panel .side-red {
   transform: rotate(180deg);
 }
 
-.features .goal-counter {
+.admin-panel .goal-counter {
   color: white;
 }
 
-.features .devider {
+.admin-panel .devider {
   position: relative;
   height: 0.4rem;
   width: 100%;
@@ -97,66 +102,66 @@
   z-index: 3;
 }
 
-.position-blue .features .devider {
+.position-blue .admin-panel .devider {
   transform: rotate(180deg);
 }
 
-.features .buttons {
+.admin-panel .buttons {
   position: absolute;
   top: 0;
   margin: 0.5rem 0.2rem;
   color: white;
 }
 
-.features .buttons .material-icons {
+.admin-panel .buttons .material-icons {
   font-size: 2rem;
 }
 
-.features .buttons .namedButton {
+.admin-panel .buttons .namedButton {
   text-align: center;
   min-width: 3.4rem;
 }
 
-.features .buttons .namedButton .text {
+.admin-panel .buttons .namedButton .text {
   font-size: 0.7rem;
   font-weight: 200;
   margin-top: -0.3rem;
   letter-spacing: 0.05rem;
 }
 
-.features .side-blue .buttons {
+.admin-panel .side-blue .buttons {
   right: 0;
   left: initial;
 }
 
-.features .side-blue .buttons > * {
+.admin-panel .side-blue .buttons > * {
   transform: rotate(90deg);
 }
 
-.features .side-red .buttons {
+.admin-panel .side-red .buttons {
   left: 0;
   right: initial;
 }
 
-.features .side-red .buttons > * {
+.admin-panel .side-red .buttons > * {
   transform: rotate(-90deg);
 }
 
-.position-blue .features .side-blue .buttons {
+.position-blue .admin-panel .side-blue .buttons {
   left: 0;
   right: initial;
 }
 
-.position-blue .features .side-blue .buttons > * {
+.position-blue .admin-panel .side-blue .buttons > * {
   transform: rotate(-90deg);
 }
 
-.position-blue .features .side-red .buttons {
+.position-blue .admin-panel .side-red .buttons {
   right: 0;
   left: initial;
 }
 
-.position-blue .features .side-red .buttons > * {
+.position-blue .admin-panel .side-red .buttons > * {
   transform: rotate(90deg);
 }
 
